<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_data"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tokenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/token"
        android:textSize="12sp"
        android:background="@android:color/darker_gray"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="monospace" />


    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@android:color/holo_red_light" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_ok_msg"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@android:color/holo_green_dark" />

</LinearLayout>